# local-ai-agents

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/agents/test_agent/: __init__.py
