[project]
name = "db-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "google-adk>=1.13.0",
    "litellm>=1.77.0",
]

[tool.pyright]
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
    "ruff>=0.12.12",
]

